@startuml DiagrammeDeClasses
skinparam classAttributeIconSize 0
skinparam dpi 200
skinparam defaultFontSize 12
skinparam shadowing false
skinparam BackgroundColor #fef6fa
skinparam defaultFontColor #2d1f3d

skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #cdb4db
  FontColor #2d1f3d
  HeaderBackgroundColor #ffafcc
  HeaderFontColor #FFFFFF
  AttributeFontColor #7a6188
  StereotypeFontColor #a2d2ff
  ArrowColor #cdb4db
}

skinparam enum {
  BackgroundColor #FFFFFF
  BorderColor #a2d2ff
  FontColor #2d1f3d
  HeaderBackgroundColor #a2d2ff
  HeaderFontColor #FFFFFF
  AttributeFontColor #7a6188
  StereotypeFontColor #a2d2ff
}

skinparam package {
  BackgroundColor #fff5f9
  BorderColor #cdb4db
  FontColor #ffafcc
}

skinparam arrow {
  Color #cdb4db
  FontColor #7a6188
}

skinparam note {
  BackgroundColor #FFFFFF
  BorderColor #ffafcc
  FontColor #2d1f3d
}

title <color:#ffafcc><b>Diagramme de Classes</b></color> - <color:#2d1f3d>Priora</color>\n<color:#7a6188>Gestion de taches avec priorisation par IA</color>

' ──────────── ENUMERATIONS ────────────

enum Categorie <<enumeration>> {
  TRAVAIL
  PERSONNEL
  ETUDES
  AUTRE
}

enum Priorite <<enumeration>> {
  BASSE
  MOYENNE
  HAUTE
  CRITIQUE
}

enum Statut <<enumeration>> {
  EN_ATTENTE
  EN_COURS
  TERMINE
}

' ──────────── ENTITES PRINCIPALES ────────────

class Utilisateur {
  - id : int
  - email : string
  - motDePasseHash : string
  - nom : string
  - prenom : string
  - horaireDebut : time
  - horaireFin : time
  - dateCreation : datetime
  --
  + sInscrire(donnees) : Utilisateur
  + seConnecter(email, motDePasse) : Token
  + consulterProfil() : Utilisateur
}

class Tache {
  - id : int
  - titre : string
  - description : string
  - categorie : Categorie
  - priorite : Priorite
  - statut : Statut
  - dateEcheance : datetime
  - dateCreation : datetime
  - dateCompletion : datetime
  - dureeEstimee : int (minutes)
  --
  + creer(donnees) : Tache
  + modifier(donnees) : Tache
  + supprimer() : void
  + changerStatut(statut) : Tache
}

class Preference {
  - id : int
  - categoriesFavorites : list
  - notificationsActives : boolean
  - heureResumeQuotidien : time
  --
  + consulter() : Preference
  + modifier(donnees) : Preference
}

' ──────────── SERVICES ────────────

class ServiceIA <<service>> {
  + prioriserTaches(taches, utilisateur) : ListePriorites
  + suggererPlanning(taches, utilisateur) : Planning
  + analyserHabitudes(taches, utilisateur) : Analyse
}

class ServiceNotification <<service>> {
  + getTachesEnRetard(utilisateur) : list<Tache>
  + getResumeDuJour(utilisateur) : list<Tache>
}

' ──────────── OBJETS VALEUR (IA) ────────────

class Token <<value>> {
  - accessToken : string
  - tokenType : string
}

class PrioriteTache <<value>> {
  - taskId : int
  - titre : string
  - score : float [0..10]
  - raison : string
}

class Suggestion <<value>> {
  - heure : string (HH:MM)
  - tache : string
  - raison : string
}

class Analyse <<value>> {
  - insights : list<string>
  - tauxCompletion : float [0..100]
  - categorieForte : string
  - conseil : string
}

' ──────────── RELATIONS ────────────

Utilisateur "1" *-- "0..*" Tache : possede >
Utilisateur "1" *-- "1" Preference : configure >

Tache --> Categorie : categorie
Tache --> Priorite : priorite
Tache --> Statut : statut

Utilisateur ..> Token : genere >

ServiceIA ..> Tache : analyse
ServiceIA ..> Utilisateur : consulte
ServiceIA ..> PrioriteTache : produit
ServiceIA ..> Suggestion : produit
ServiceIA ..> Analyse : produit

ServiceNotification ..> Tache : filtre
ServiceNotification ..> Utilisateur : pour

@enduml
